--- a/project.config.json
+++ b/project.config.json
@@ -1,23 +1,23 @@
 {
-    "appid": "tt740d02b0eb01e4a907",
-    "projectname": "LuckAR",
-    "unity": {
-        "build": {
-            "webgl": "C:\\Users\\Admin\\Desktop\\Projects\\Unity\\LuckAR-Miniprogram\\tt-minigame\\webgl_package-20250909_190228.zip",
-            "native": {
-                "il2cpp": "",
-                "apk": "",
-                "fullApk": ""
-            },
-            "instantGame": ""
-        },
-        "publishType": "2",
-        "starkSdkVersion": "Without StarkSDK",
-        "unityToolsVersion": "",
-        "unityEngineVersion": "2022.3.62f1",
-        "arch": ""
+  "appid": "tt740d02b0eb01e4a907",
+  "projectname": "LuckAR",
+  "unity": {
+    "build": {
+      "webgl": "tt-minigame\\webgl_package-20250911_132519.zip",
+      "native": {
+        "il2cpp": "",
+        "apk": "",
+        "fullApk": ""
+      },
+      "instantGame": ""
     },
-    "setting": {
-        "urlCheck": false
-    }
+    "publishType": "2",
+    "starkSdkVersion": "Without StarkSDK",
+    "unityToolsVersion": "",
+    "unityEngineVersion": "2022.3.62f1",
+    "arch": ""
+  },
+  "setting": {
+    "urlCheck": false
+  }
 }
